@@ -1,6 +1,9 @@
 package com.esprit.publicationservice.services;
 
 import com.esprit.publicationservice.clients.UserClient;
+import com.esprit.publicationservice.dto.BasePublicationRequest;
+import com.esprit.publicationservice.dto.CreatePublicationRequest;
+import com.esprit.publicationservice.dto.UpdatePublicationRequest;
 import com.esprit.publicationservice.dto.UserBlockDTO;
 import com.esprit.publicationservice.dto.UserDTO;
 import com.esprit.publicationservice.entities.Publication;
@@ -8,6 +11,8 @@ import com.esprit.publicationservice.entities.StatutPublication;
 import com.esprit.publicationservice.entities.TypePublication;
 import com.esprit.publicationservice.repositories.PublicationRepository;
 import lombok.RequiredArgsConstructor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -20,12 +25,27 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class PublicationService {
 
+    private static final Logger logger = LoggerFactory.getLogger(PublicationService.class);
+
     private final PublicationRepository publicationRepository;
     private final UserClient userClient;
-    private static final String UPLOAD_DIR = "uploads/publications/";
-    private static final int SIGNALEMENT_THRESHOLD = 3;
-    private static final long BLOCK_THRESHOLD = 3;
 
+    private static final String UPLOAD_DIR           = "uploads/publications/";
+    private static final int    SIGNALEMENT_THRESHOLD = 3;
+    private static final long   BLOCK_THRESHOLD       = 3;
+    private static final String PUBLICATION_NOT_FOUND = "Publication not found";
+
+    // ========== CUSTOM EXCEPTIONS ==========
+
+    public static class PublicationNotFoundException extends RuntimeException {
+        public PublicationNotFoundException(String message) { super(message); }
+    }
+
+    public static class UserNotFoundException extends RuntimeException {
+        public UserNotFoundException(String message) { super(message); }
+    }
+
+    // ========== PUBLIC METHODS ==========
 
     public List<Publication> getAllPublications() {
         List<Publication> list = publicationRepository.findByStatutOrderByCreateAtDesc(StatutPublication.ACTIVE);
@@ -51,7 +71,6 @@ public class PublicationService {
         return list;
     }
 
-
     public List<Publication> getArchivedByUserId(Integer userId) {
         List<Publication> list = publicationRepository.findByUserIdAndStatut(userId, StatutPublication.ARCHIVED);
         list.forEach(this::enrichWithUser);
@@ -60,11 +79,10 @@ public class PublicationService {
 
     public Publication getPublicationById(Integer id) {
         Publication p = publicationRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Publication not found: " + id));
+                .orElseThrow(() -> new PublicationNotFoundException(PUBLICATION_NOT_FOUND + ": " + id));
         enrichWithUser(p);
         return p;
     }
-
 
     public boolean isUserBlocked(Integer userId) {
         return publicationRepository.countArchivedByUserId(userId) >= BLOCK_THRESHOLD;
@@ -74,13 +92,12 @@ public class PublicationService {
         return publicationRepository.countArchivedByUserId(userId);
     }
 
-
     public void reactiverCompteUser(Integer userId) {
         List<Publication> allUserPubs = publicationRepository.findByUserId(userId);
 
         List<Publication> archivedPubs = allUserPubs.stream()
                 .filter(p -> p.getStatut() == StatutPublication.ARCHIVED)
-                .collect(Collectors.toList());
+                .toList();
 
         for (Publication p : archivedPubs) {
             p.getImages().forEach(this::deleteFile);
@@ -90,7 +107,7 @@ public class PublicationService {
 
         List<Publication> activePubs = allUserPubs.stream()
                 .filter(p -> p.getStatut() == StatutPublication.ACTIVE)
-                .collect(Collectors.toList());
+                .toList();
 
         for (Publication p : activePubs) {
             p.getSignalements().clear();
@@ -98,7 +115,6 @@ public class PublicationService {
         }
         publicationRepository.saveAll(activePubs);
     }
-
 
     public List<UserBlockDTO> getAllUsersBlockStatus() {
         Map<Integer, Long> archivedCountByUser = publicationRepository
@@ -109,14 +125,17 @@ public class PublicationService {
 
         List<UserBlockDTO> result = new ArrayList<>();
         for (Map.Entry<Integer, Long> entry : archivedCountByUser.entrySet()) {
-            Integer uid = entry.getKey();
-            long count  = entry.getValue();
-            String name = "", lastName = "";
+            Integer uid      = entry.getKey();
+            long    count    = entry.getValue();
+            String  name     = "";
+            String  lastName = "";
             try {
                 UserDTO u = userClient.getUserById(uid);
                 name     = u.getName()     != null ? u.getName()     : "";
                 lastName = u.getLastName() != null ? u.getLastName() : "";
-            } catch (Exception ignored) {}
+            } catch (Exception e) {
+                logger.debug("Could not fetch user {}: {}", uid, e.getMessage());
+            }
             result.add(new UserBlockDTO(uid, name, lastName, count));
         }
 
@@ -124,10 +143,9 @@ public class PublicationService {
         return result;
     }
 
-
     public Publication signalerPublication(Integer id, Integer userId, String raison) {
         Publication p = publicationRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Publication not found: " + id));
+                .orElseThrow(() -> new PublicationNotFoundException(PUBLICATION_NOT_FOUND + ": " + id));
 
         if (p.getStatut() != StatutPublication.ACTIVE) {
             throw new IllegalStateException("Cette publication n'est pas active.");
@@ -149,65 +167,29 @@ public class PublicationService {
         return saved;
     }
 
-    public Publication createPublication(String titre, String contenue, TypePublication type,
-                                         Integer userId, List<MultipartFile> images,
-                                         List<MultipartFile> pdfs, String titleColor,
-                                         String contentColor, String titleFontSize) throws IOException {
-        if (titre == null || titre.trim().isEmpty()) throw new IllegalArgumentException("Title is required");
-        if (contenue == null || contenue.trim().isEmpty()) throw new IllegalArgumentException("Content is required");
-        try { userClient.getUserById(userId); } catch (Exception e) { throw new RuntimeException("User not found: " + userId); }
+    public Publication createPublication(CreatePublicationRequest request) throws IOException {
+        validateCreateInput(request);
 
-        if (isUserBlocked(userId)) {
-            throw new IllegalStateException("BLOCKED: Votre compte est bloqué suite à 3 posts signalés. Contactez l'administrateur.");
-        }
-
-        if (type == TypePublication.QUESTION) {
-            boolean hasImages = images != null && images.stream().anyMatch(f -> !f.isEmpty());
-            boolean hasPdfs   = pdfs   != null && pdfs.stream().anyMatch(f -> !f.isEmpty());
-            if (hasImages || hasPdfs) throw new IllegalArgumentException("No images/PDFs allowed for QUESTION type.");
-        }
-
-        Publication p = new Publication();
-        p.setTitre(titre); p.setContenue(contenue); p.setType(type); p.setUserId(userId);
-        p.setStatut(StatutPublication.ACTIVE);
-        if (titleColor    != null) p.setTitleColor(titleColor);
-        if (contentColor  != null) p.setContentColor(contentColor);
-        if (titleFontSize != null) p.setTitleFontSize(titleFontSize);
-
-        if (images != null) { List<String> names = new ArrayList<>(); for (MultipartFile f : images) if (!f.isEmpty()) names.add(saveFile(f, false)); p.setImages(names); }
-        if (pdfs   != null) { List<String> names = new ArrayList<>(); for (MultipartFile f : pdfs)   if (!f.isEmpty()) names.add(saveFile(f, true));  p.setPdfs(names);   }
+        Publication p = buildPublication(request);
+        p.setImages(saveFiles(request.getImages(), false));
+        p.setPdfs(saveFiles(request.getPdfs(), true));
 
         Publication saved = publicationRepository.save(p);
         enrichWithUser(saved);
         return saved;
     }
 
-    public Publication updatePublication(Integer id, String titre, String contenue, TypePublication type,
-                                         Integer userId, List<MultipartFile> newImages, List<String> imagesToKeep,
-                                         List<MultipartFile> newPdfs, List<String> pdfsToKeep,
-                                         String titleColor, String contentColor, String titleFontSize) throws IOException {
-        Publication p = publicationRepository.findById(id).orElseThrow(() -> new RuntimeException("Publication not found"));
-        if (!p.getUserId().equals(userId)) throw new RuntimeException("Not authorized");
-        if (titre    != null && !titre.trim().isEmpty())    p.setTitre(titre);
-        if (contenue != null && !contenue.trim().isEmpty()) p.setContenue(contenue);
-        if (type         != null) p.setType(type);
-        if (titleColor   != null) p.setTitleColor(titleColor);
-        if (contentColor != null) p.setContentColor(contentColor);
-        if (titleFontSize!= null) p.setTitleFontSize(titleFontSize);
+    public Publication updatePublication(UpdatePublicationRequest request) throws IOException {
+        Publication p = publicationRepository.findById(request.getId())
+                .orElseThrow(() -> new PublicationNotFoundException(PUBLICATION_NOT_FOUND));
 
-        List<String> currentImages = new ArrayList<>(p.getImages());
-        for (String img : currentImages) if (imagesToKeep == null || !imagesToKeep.contains(img)) deleteFile(img);
-        List<String> updatedImages = new ArrayList<>();
-        if (imagesToKeep != null) updatedImages.addAll(imagesToKeep);
-        if (newImages    != null) for (MultipartFile f : newImages) if (!f.isEmpty()) updatedImages.add(saveFile(f, false));
-        p.setImages(updatedImages);
+        if (!p.getUserId().equals(request.getUserId())) {
+            throw new UserNotFoundException("Not authorized");
+        }
 
-        List<String> currentPdfs = new ArrayList<>(p.getPdfs());
-        for (String pdf : currentPdfs) if (pdfsToKeep == null || !pdfsToKeep.contains(pdf)) deleteFile(pdf);
-        List<String> updatedPdfs = new ArrayList<>();
-        if (pdfsToKeep != null) updatedPdfs.addAll(pdfsToKeep);
-        if (newPdfs    != null) for (MultipartFile f : newPdfs) if (!f.isEmpty()) updatedPdfs.add(saveFile(f, true));
-        p.setPdfs(updatedPdfs);
+        applyTextFields(p, request);
+        p.setImages(updateFiles(p.getImages(), request.getImagesToKeep(), request.getNewImages(), false));
+        p.setPdfs(updateFiles(p.getPdfs(), request.getPdfsToKeep(), request.getNewPdfs(), true));
 
         Publication saved = publicationRepository.save(p);
         enrichWithUser(saved);
@@ -215,35 +197,140 @@ public class PublicationService {
     }
 
     public void deletePublication(Integer id, Integer userId) {
-        Publication p = publicationRepository.findById(id).orElseThrow(() -> new RuntimeException("Publication not found"));
-        if (!p.getUserId().equals(userId)) throw new RuntimeException("Not authorized");
-        p.getImages().forEach(this::deleteFile); p.getPdfs().forEach(this::deleteFile);
+        Publication p = publicationRepository.findById(id)
+                .orElseThrow(() -> new PublicationNotFoundException(PUBLICATION_NOT_FOUND));
+        if (!p.getUserId().equals(userId)) {
+            throw new UserNotFoundException("Not authorized");
+        }
+        deletePublicationFiles(p);
         publicationRepository.delete(p);
     }
 
     public void adminDeletePublication(Integer id) {
-        Publication p = publicationRepository.findById(id).orElseThrow(() -> new RuntimeException("Publication not found"));
-        p.getImages().forEach(this::deleteFile); p.getPdfs().forEach(this::deleteFile);
+        Publication p = publicationRepository.findById(id)
+                .orElseThrow(() -> new PublicationNotFoundException(PUBLICATION_NOT_FOUND));
+        deletePublicationFiles(p);
         publicationRepository.delete(p);
     }
 
+    // ========== PRIVATE HELPER METHODS ==========
+
+    private void validateCreateInput(CreatePublicationRequest request) {
+        String titre    = request.getTitre();
+        String contenue = request.getContenue();
+        Integer userId  = request.getUserId();
+
+        if (titre == null || titre.trim().isEmpty()) {
+            throw new IllegalArgumentException("Title is required");
+        }
+        if (contenue == null || contenue.trim().isEmpty()) {
+            throw new IllegalArgumentException("Content is required");
+        }
+        try {
+            userClient.getUserById(userId);
+        } catch (Exception e) {
+            throw new UserNotFoundException("User not found: " + userId);
+        }
+        if (isUserBlocked(userId)) {
+            throw new IllegalStateException(
+                    "BLOCKED: Votre compte est bloqué suite à 3 posts signalés. Contactez l'administrateur."
+            );
+        }
+        if (request.getType() == TypePublication.QUESTION) {
+            List<MultipartFile> images = request.getImages();
+            List<MultipartFile> pdfs   = request.getPdfs();
+            boolean hasImages = images != null && images.stream().anyMatch(f -> !f.isEmpty());
+            boolean hasPdfs   = pdfs   != null && pdfs.stream().anyMatch(f -> !f.isEmpty());
+            if (hasImages || hasPdfs) {
+                throw new IllegalArgumentException("No images/PDFs allowed for QUESTION type.");
+            }
+        }
+    }
+
+    private Publication buildPublication(BasePublicationRequest request) {
+        Publication p = new Publication();
+        p.setTitre(request.getTitre());
+        p.setContenue(request.getContenue());
+        p.setType(request.getType());
+        p.setUserId(request.getUserId());
+        p.setStatut(StatutPublication.ACTIVE);
+        applyColorFields(p, request);
+        return p;
+    }
+
+    private void applyTextFields(Publication p, BasePublicationRequest request) {
+        String titre    = request.getTitre();
+        String contenue = request.getContenue();
+        if (titre    != null && !titre.trim().isEmpty())    p.setTitre(titre);
+        if (contenue != null && !contenue.trim().isEmpty()) p.setContenue(contenue);
+        if (request.getType() != null) p.setType(request.getType());
+        applyColorFields(p, request);
+    }
+
+    private void applyColorFields(Publication p, BasePublicationRequest request) {
+        if (request.getTitleColor()   != null) p.setTitleColor(request.getTitleColor());
+        if (request.getContentColor() != null) p.setContentColor(request.getContentColor());
+        if (request.getTitleFontSize() != null) p.setTitleFontSize(request.getTitleFontSize());
+    }
+
+    private void deletePublicationFiles(Publication p) {
+        p.getImages().forEach(this::deleteFile);
+        p.getPdfs().forEach(this::deleteFile);
+    }
+
+    private List<String> saveFiles(List<MultipartFile> files, boolean isPdf) throws IOException {
+        List<String> names = new ArrayList<>();
+        if (files != null) {
+            for (MultipartFile f : files) {
+                if (!f.isEmpty()) names.add(saveFile(f, isPdf));
+            }
+        }
+        return names;
+    }
+
+    private List<String> updateFiles(List<String> current, List<String> toKeep,
+                                     List<MultipartFile> newFiles, boolean isPdf) throws IOException {
+        for (String file : current) {
+            if (toKeep == null || !toKeep.contains(file)) deleteFile(file);
+        }
+        List<String> updated = new ArrayList<>();
+        if (toKeep != null) updated.addAll(toKeep);
+        if (newFiles != null) {
+            for (MultipartFile f : newFiles) {
+                if (!f.isEmpty()) updated.add(saveFile(f, isPdf));
+            }
+        }
+        return updated;
+    }
 
     private void enrichWithUser(Publication p) {
-        try { p.setUser(userClient.getUserById(p.getUserId())); } catch (Exception ignored) {}
+        try {
+            p.setUser(userClient.getUserById(p.getUserId()));
+        } catch (Exception e) {
+            logger.debug("Could not enrich publication {} with user data: {}", p.getId(), e.getMessage());
+        }
     }
 
     private String saveFile(MultipartFile file, boolean isPdf) throws IOException {
         String ct = file.getContentType();
-        if (isPdf  && (ct == null || !ct.equals("application/pdf"))) throw new IllegalArgumentException("Only PDFs accepted");
-        if (!isPdf && (ct == null || !ct.startsWith("image/")))      throw new IllegalArgumentException("Only images accepted");
+        if (isPdf  && (ct == null || !ct.equals("application/pdf"))) {
+            throw new IllegalArgumentException("Only PDFs accepted");
+        }
+        if (!isPdf && (ct == null || !ct.startsWith("image/"))) {
+            throw new IllegalArgumentException("Only images accepted");
+        }
         String name = UUID.randomUUID() + "_" + file.getOriginalFilename();
-        Path path = Paths.get(UPLOAD_DIR);
+        Path   path = Paths.get(UPLOAD_DIR);
         if (!Files.exists(path)) Files.createDirectories(path);
         Files.copy(file.getInputStream(), path.resolve(name), StandardCopyOption.REPLACE_EXISTING);
         return name;
     }
 
     private void deleteFile(String name) {
-        try { Files.deleteIfExists(Paths.get(UPLOAD_DIR + name)); } catch (IOException e) { System.err.println("Delete error: " + e.getMessage()); }
+        try {
+            Files.deleteIfExists(Paths.get(UPLOAD_DIR + name));
+        } catch (IOException e) {
+            logger.warn("Delete error for file {}: {}", name, e.getMessage());
+        }
     }
 }
